[gd_scene load_steps=12 format=3 uid="uid://fb2hhu3hvjml"]

[ext_resource type="Script" uid="uid://dr2jn8qf7cehb" path="res://RoundCountDown/round_count_down.gd" id="1_rra43"]
[ext_resource type="Texture2D" uid="uid://comm7jvphnn1i" path="res://RoundCountDown/CountDownPanelBG.svg" id="2_e5j6p"]
[ext_resource type="Texture2D" uid="uid://dmyu6nla2gpxr" path="res://RoundCountDown/CountDownShadow.png" id="3_b8ha1"]
[ext_resource type="Texture2D" uid="uid://cgxlh68t8ywla" path="res://RoundCountDown/CountDownPanelDeco.svg" id="3_pxsen"]
[ext_resource type="Texture2D" uid="uid://ey5dhgxhtmpk" path="res://RoundCountDown/CountDownPanelFG.svg" id="4_b8ha1"]
[ext_resource type="FontFile" uid="uid://q0cdino8xm1j" path="res://Fonts/BRLNSR.TTF" id="5_t8ktn"]
[ext_resource type="Texture2D" uid="uid://ql6k0e8jmva5" path="res://RoundCountDown/CountDownBarMask.svg" id="6_iqts5"]
[ext_resource type="Texture2D" uid="uid://dmaqm1j6k78oy" path="res://RoundCountDown/CountDownBar.svg" id="7_8f1uk"]

[sub_resource type="Animation" id="Animation_27i3i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CountDownPanel/CountdownPanelBG:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -96)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CountDownPanel/CountdownPanelFG:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -96)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CountDownPanel/CountDownBarMask:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -96)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CountDownPanel/CountDownBarMask/CountDownBar:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-74, 10)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CountDownPanel/CountdownPanelDeco:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -41)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CountDownPanel:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CountDownPanel:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_2vylk"]
resource_name = "countdown_anim"
length = 14.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CountDownPanel/CountdownPanelBG:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4, 6, 8, 10, 12),
"transitions": PackedFloat32Array(1, 0.707107, 1.51572, 0.707107, 1.51572, 0.707107, 1.51572),
"update": 0,
"values": [Vector2(0, -107), Vector2(0, -107), Vector2(0, -173), Vector2(0, -107), Vector2(0, -173), Vector2(0, -107), Vector2(0, -173)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CountDownPanel/CountdownPanelFG:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2, 4, 6, 8, 10, 12),
"transitions": PackedFloat32Array(1, 0.707107, 1.51572, 0.707107, 1.51572, 0.707107, 1.51572),
"update": 0,
"values": [Vector2(0, -107), Vector2(0, -107), Vector2(0, -173), Vector2(0, -107), Vector2(0, -173), Vector2(0, -107), Vector2(0, -173)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CountDownPanel/CountDownBarMask:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2, 4, 6, 8, 10, 12),
"transitions": PackedFloat32Array(1, 0.707107, 1.51572, 0.707107, 1.51572, 0.707107, 1.51572),
"update": 0,
"values": [Vector2(0, -107), Vector2(0, -107), Vector2(0, -173), Vector2(0, -107), Vector2(0, -173), Vector2(0, -107), Vector2(0, -173)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CountDownPanel/CountdownPanelDeco:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2.3, 4.4, 6.3, 8.4, 10.3, 12.4),
"transitions": PackedFloat32Array(1, 0.707107, 1.51572, 0.707107, 1.51572, 0.707107, 1.51572),
"update": 0,
"values": [Vector2(-7, -105), Vector2(-7, -105), Vector2(0, -173), Vector2(-7, -105), Vector2(0, -173), Vector2(-7, -105), Vector2(0, -173)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CountDownPanel/CountDownBarMask/CountDownBar:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 2.1, 12.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-973, 10), Vector2(-973, 10), Vector2(-50, 10)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CountDownPanel/CountDownBarMask/CountDownBar:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(2.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CountDownPanel:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1.9, 2.8, 12.4, 13.2, 14),
"transitions": PackedFloat32Array(0.406126, 1.93187, 2.21914, 0.435275, 2.37841, 1),
"update": 0,
"values": [Vector2(0, -1142), Vector2(0, 90), Vector2(0, 0), Vector2(0, 0), Vector2(0, 90), Vector2(0, -1142)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CountDownPanel:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8g06g"]
_data = {
&"RESET": SubResource("Animation_27i3i"),
&"countdown_anim": SubResource("Animation_2vylk")
}

[node name="RoundCountDown" type="Node2D"]
z_index = 200
z_as_relative = false
script = ExtResource("1_rra43")

[node name="CountDownPanel" type="Node2D" parent="."]

[node name="CountdownPanelBG" type="Sprite2D" parent="CountDownPanel"]
modulate = Color(0.91, 0.91, 0.91, 1)
position = Vector2(0, -96)
texture = ExtResource("2_e5j6p")

[node name="Shadow" type="Sprite2D" parent="CountDownPanel/CountdownPanelBG"]
show_behind_parent = true
scale = Vector2(0.795, 0.966)
texture = ExtResource("3_b8ha1")

[node name="CountdownPanelDeco" type="Sprite2D" parent="CountDownPanel"]
modulate = Color(0.485303, 0.479282, 0.94517, 1)
position = Vector2(0, -41)
texture = ExtResource("3_pxsen")

[node name="CountdownPanelFG" type="Sprite2D" parent="CountDownPanel"]
modulate = Color(0.907046, 0.510627, 0.662413, 1)
position = Vector2(0, -96)
texture = ExtResource("4_b8ha1")

[node name="ModInfo" type="Label" parent="CountDownPanel/CountdownPanelFG"]
custom_minimum_size = Vector2(700, 87.31)
offset_left = -353.0
offset_top = -47.0
offset_right = 347.0
offset_bottom = 70.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_t8ktn")
theme_override_font_sizes/font_size = 36
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="CountDownBarMask" type="Sprite2D" parent="CountDownPanel"]
clip_children = 1
position = Vector2(0, -96)
texture = ExtResource("6_iqts5")

[node name="CountDownBar" type="Sprite2D" parent="CountDownPanel/CountDownBarMask"]
position = Vector2(-74, 10)
texture = ExtResource("7_8f1uk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8g06g")
}
